FIX: Fixnuti z-indexu
Fix z-indexu v popover a reservation-popover

--- a/educhemlp.client/src/pages/app/AppLayout.scss
+++ b/educhemlp.client/src/pages/app/AppLayout.scss
@@ -333,7 +333,7 @@ a {
                 border-radius: 8px;
                 top: calc(100%);
                 right: 0;
-                z-index: 3;
+                z-index: 5;
                 gap: 12px;
                 justify-content: flex-start;
                 
